# klassic

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPENDENT_TYPES_DESIGN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  README.md  TYPECLASS_STATUS.md  build.sbt
.github/workflows/: ci.yml  docs.yml
crates/klassic-eval/: Cargo.toml
crates/klassic-eval/src/: builtin_registry.rs  lib.rs  runtime_types.rs
crates/klassic-macro-peg/: Cargo.toml
crates/klassic-macro-peg/src/: lib.rs
crates/klassic-native/: Cargo.toml
crates/klassic-native/src/: lib.rs
crates/klassic-rewrite/: Cargo.toml
crates/klassic-rewrite/src/: lib.rs
crates/klassic-runtime/: Cargo.toml
crates/klassic-runtime/src/: lib.rs
crates/klassic-span/: Cargo.toml
crates/klassic-span/src/: lib.rs
crates/klassic-syntax/: Cargo.toml
crates/klassic-syntax/src/: lib.rs
crates/klassic-types/: Cargo.toml
crates/klassic-types/src/: lib.rs
docs/: architecture-rust.md  implementation-notes.md  native-coverage.md  rust-port-notes.md  spec-matrix.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/cookbook/: calculator.md  config-env.md  greeter.md  hello.md  index.md  word-count.md  (+1 more)
docs/book/theme/: custom.css
examples/: typeclass-final-example.kl  typeclass-full.kl
project/: plugins.sbt
src/: cli.rs  main.rs
test-programs/: builtin_functions.kl  typeclass-current-state.kl  working-monad-example.kl
test-programs/future-features/: typeclass-polymorphic.kl
tests/: cli_smoke.rs  language_regressions.rs  ported_scala_specs.rs  sample_programs.rs
(+25 files in other folders)
